--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -34,3 +34,16 @@
     margin: 0 0 64px 0;
 }
 
+.results {
+    background-color: #F5F6F7;
+    padding: 80px 104px;
+}
+
+.results__title {
+    margin: 0 0 64px 0;
+    font-family: 'Roboto Slab', sans-serif;
+    font-size: 40px;
+    line-height: 1.2;
+    font-weight: normal;
+    color: #1A1B22;
+}
