--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -3,8 +3,22 @@
 }
 
 .main__background {
-    background: url('../../images/background.png') center no-repeat;
+    background: url('../../images/background-highres.jpg') center no-repeat;
     background-size: cover;
+    position: relative;
+    z-index: 0;
+}
+
+.main__background::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.5;
+    z-index: -1;
 }
 
 .cover {
@@ -46,4 +60,33 @@
     line-height: 1.2;
     font-weight: normal;
     color: #1A1B22;
+}
+
+
+@media screen and (max-width: 930px) {
+    .results {
+        background-color: #F5F6F7;
+        padding: 80px 104px;
+    }
+    
+    .results__title {
+        margin: 0 0 64px 0;
+        font-family: 'Roboto Slab', sans-serif;
+        font-size: 40px;
+        line-height: 1.2;
+        font-weight: normal;
+        color: #1A1B22;
+    }
+}
+  
+@media screen and (max-width: 425px) {
+    .results {
+        background-color: #F5F6F7;
+        padding: 16px 32px;
+    }
+    
+    .results__title {
+        margin: 0 0 24px 0;
+        font-size: 30px;
+    }
 }
