--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -2,10 +2,27 @@
 
 }
 
-.naviagtion__main{
-    
+.naviagtion__main {
+    color: #B6BCBF;
+    font-size: 18px;
+    font-weight: normal;
+    margin-right: 32px;
 }
 
 .navigation__auth {
-
+    width: 112px;
+    height: 48px;
+    background-color: transparent;
+    background-image: url('../../images/logout-icon.png');
+    /* background-position: right; */
+    background-position-x: 77px;
+    background-position-y: center;
+    background-repeat: no-repeat;
+    background-size: 17.5px 16px;
+    border: 1px solid #fff;
+    border-radius: 100px;
+    padding: 0 18px;
+    color: #fff;
+    font-size: 18px;
+    text-align: left;
 }
