--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -24,3 +24,36 @@
     top: 0;
     right: 0;
 }
+
+@media screen and (max-width: 930px) {
+    .search__input {
+        width: 448px;
+        height: 56px;
+    }
+    
+    .search__button {
+        width: 160px;
+        height: 56px;
+    }
+}
+  
+@media screen and (max-width: 425px) {
+    .search {
+        flex-direction: column;
+    }
+    
+    .search__input {
+        width: 288px;
+        height: 56px;
+    }
+    
+    .search__button {
+        width: 288px;
+        height: 56px;
+        border-radius: 100px;
+        color: #fff;
+        position: initial;
+        margin-top: 16px;
+        margin-bottom: 32px;
+    }
+}
