--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #ffffff20;
+    box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
 }
 
 .header__title {
@@ -12,4 +13,5 @@
     font-weight: normal;
     font-size: 20px;
     line-height: 1.2;
+    margin: 0;
 }
