--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -51,6 +51,8 @@
 .results {
     background-color: #F5F6F7;
     padding: 80px 104px;
+    display: flex;
+    flex-direction: column;
 }
 
 .results__title {
@@ -60,6 +62,26 @@
     line-height: 1.2;
     font-weight: normal;
     color: #1A1B22;
+}
+
+.results__show-more {
+    width: 288px;
+    height: 64px;
+    align-self: center;
+    border-radius: 80px;
+    border-color: transparent;
+    background-color: #fff;
+    color: #1A1B22;
+    font-size: 18px;
+    line-height: 1.2;
+    margin-top: 64px;
+    padding: 0;
+    transition: opacity .4s ease-out;
+}
+
+.results__show-more:hover {
+    opacity: .9;
+    cursor: pointer;
 }
 
 
@@ -77,6 +99,12 @@
         font-weight: normal;
         color: #1A1B22;
     }
+
+   .results__show-more {
+    width: 240px;
+    height: 56px;
+    margin-top: 22px;
+ }
 }
   
 @media screen and (max-width: 425px) {
@@ -88,5 +116,11 @@
     .results__title {
         margin: 0 0 24px 0;
         font-size: 30px;
+    }
+
+    .results__show-more {
+        width: 288px;
+        height: 56px;
+        margin-top: 15px;
     }
 }
