--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -9,6 +9,14 @@
     border: none;
     border-radius: 100px;
     padding: 0;
+    padding-left: 24px;
+    box-sizing: border-box;
+}
+
+.search__input::placeholder {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    /* margin-left: 24px; */
 }
 
 .search__button {
@@ -23,6 +31,17 @@
     position: absolute;
     top: 0;
     right: 0;
+    transition: background-color .4s ease-out;
+}
+
+.search__button:hover {
+    background-color: #347EFF;
+    cursor: pointer;
+}
+
+.search__button:active {
+    background-color: #2A65CC;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 930px) {
