--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,3 +15,10 @@
     line-height: 1.2;
     margin: 0;
 }
+
+
+@media screen and (max-width: 700px) {
+    .header {
+        position: relative;
+    }
+}
