--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,5 +1,5 @@
 .navigation {
-
+    display: flex;
 }
 
 .navigation__main {
@@ -69,4 +69,86 @@
     text-align: left;
     color: #1A1B22;
     border: 1px solid #1A1B22;
+}
+
+.burger-menu {
+    display: none;
+}
+
+@media screen and (max-width: 700px) {
+    .navigation {
+        display: none;
+    }
+
+    .burger-menu {
+        display: flex;
+    }
+
+    .burger-menu__toggle {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        overflow: hidden;
+        clip: rect(0 0 0 0);
+    }
+
+    .burger-menu__pseudo-btn {
+        display: inline-block;
+        vertical-align: middle;
+        background: url('../../images/menu.png') center no-repeat;
+        background-size: 24px 24px;
+        width: 24px;
+        height: 24px;
+        box-sizing: border-box;
+        z-index: 1;
+    }
+
+    .burger-menu__toggle:checked + .burger-menu__btn > .burger-menu__pseudo-btn {
+        background: url('../../images/back.png') center no-repeat;
+    }
+        
+    .burger-menu__box {
+        visibility: hidden;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        position: absolute;
+        bottom: -380%;
+        left: 0;
+        width: 100%;
+        background-color: #1A1B22;
+        border-radius: 16px;
+        display: flex;
+        flex-direction: column;
+        padding-left: 16px;
+        box-sizing: border-box;
+    }
+
+    .burger-menu__toggle:checked ~ .burger-menu__box {
+        visibility: visible;
+    }
+
+    .burger-menu__item {
+        text-decoration: none;
+        color: #fff;
+        font-family: 'Roboto', sans-serif;
+        font-size: 18px;
+        line-height: 3.1;
+        /* margin: 16px 16px 22px 16px; */
+    }
+
+    .burger-menu__auth-btn {
+        width: 288px;
+        height: 56px;
+        background-color: transparent;
+        border: 1px solid #fff;
+        border-radius: 100px;
+        color: #fff;
+        font-family: 'Roboto', sans-serif;
+        font-size: 18px;
+        line-height: 1.2;
+        text-align: center;
+        justify-self: center;
+        margin: 22px auto 24px auto;
+    }
 }
