--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -26,6 +26,80 @@
     right: 24px;
 }
 
+.card__save-button:focus {
+    outline: none;
+}
+
+.card__delete-button {
+    border: none;
+    border-radius: 8px;
+    background: #fff;
+    background-image: url('../../images/delete.png');
+    background-size: 18px 19px;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 40px;
+    height: 40px;
+    padding: 0;
+    transition: background-image 0.4s linear;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+}
+
+.card__delete-button:hover {
+    background-image: url('../../images/delete-hover.png');
+}
+
+.card__delete-button:focus {
+    outline: none;
+}
+
+.card__delete-hint {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.5s linear;
+    width: 159px;
+    height: 40px;
+    border-radius: 8px;
+    border-color: transparent;
+    background-color: #fff;
+    color: #000;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    position: absolute;
+    top: 24px;
+    right: 70px;
+}
+
+.card__delete-button:hover + .card__delete-hint {
+    visibility: visible;
+    opacity: 1;
+}
+
+.card__save-hint {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.5s linear;
+    width: 182px;
+    height: 40px;
+    border-radius: 8px;
+    border-color: transparent;
+    background-color: #fff;
+    color: #000;
+    font-family: 'Roboto', sans-serif;
+    font-size: 10px;
+    position: absolute;
+    top: 24px;
+    right: 70px;
+}
+
+.card__save-button:hover + .card__save-hint {
+    visibility: visible;
+    opacity: 1;
+}
+
+
 .card__save-button:hover {
     background-image: url('../../images/save-icon.png');
 }
