--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -11,12 +11,22 @@
     padding: 0;
     padding-left: 24px;
     box-sizing: border-box;
+    color: #1A1B22;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .search__input::placeholder {
+    color: #B6BCBF;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
+    line-height: 22px;
     /* margin-left: 24px; */
+}
+
+.search__input:focus {
+    outline: none;
 }
 
 .search__button {
@@ -26,6 +36,7 @@
     color: #fff;
     border: none;
     background-color: #2F71E5;
+    box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.2);
     margin: 0;
     padding: 0;
     position: absolute;
@@ -42,6 +53,10 @@
 .search__button:active {
     background-color: #2A65CC;
     cursor: pointer;
+}
+
+.search__button:focus {
+    outline: none;
 }
 
 @media screen and (max-width: 930px) {
