--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -34,6 +34,9 @@
     height: 64px;
     border-radius: 100px;
     color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    line-height: 24px;
     border: none;
     background-color: #2F71E5;
     box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.2);
