--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -82,7 +82,7 @@
     }
     
     .footer__copyright {
-       margin: 0 16px;
+       margin: 0 16px 20px 16px;
     }
     
     .footer__links {
