--- a/src/components/SavedNews/SavedNews.css
+++ b/src/components/SavedNews/SavedNews.css
@@ -38,4 +38,54 @@
 .saved-news__container {
     padding: 62px 104px;
     background-color: #F5F6F7;
+    box-sizing: border-box;
+}
+
+@media screen and (max-width: 930px) {
+    .saved-news__text-container {
+        margin: 24px auto 32px 40px;
+    }
+
+    .saved-news__title {
+        max-width: 336px;
+        margin: 0 0 16px 0;
+        font-size: 30px;
+    }
+    
+    .saved-news__breadcrumbs {
+        margin: 0 0 16px 0;
+        font-size: 14px;
+    }
+    
+    .saved-news__keywords{
+        font-size: 14px;
+        line-height: 1.7;
+    }
+    
+    .saved-news__container {
+        padding: 32px 40px;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .saved-news__text-container {
+        margin: 8px auto 16px 32px;
+    }
+
+    .saved-news__title {
+        max-width: 288px;
+    }
+    
+    .saved-news__breadcrumbs {
+        font-size: 12px;
+    }
+    
+    .saved-news__keywords{
+        font-size: 18px;
+        line-height: 1.3;
+    }
+    
+    .saved-news__container {
+        padding: 24px 16px;
+    }
 }
