--- a/src/components/SavedNews/SavedNews.css
+++ b/src/components/SavedNews/SavedNews.css
@@ -41,6 +41,10 @@
     box-sizing: border-box;
 }
 
+.saved-news__keyword-span {
+    font-weight: 900;
+}
+
 @media screen and (max-width: 930px) {
     .saved-news__text-container {
         margin: 24px auto 32px 40px;
@@ -69,7 +73,7 @@
 
 @media screen and (max-width: 425px) {
     .saved-news__text-container {
-        margin: 8px auto 16px 32px;
+        margin: 8px auto 32px 16px;
     }
 
     .saved-news__title {
