--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -22,9 +22,14 @@
     }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 540px) {
     .header {
         position: relative;
+        z-index: 20;
+    }
+
+    .header__title {
+        z-index: 20;
     }
 }
 
