--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -9,6 +9,32 @@
     position: relative;
 }
 
+.card__keyword {
+    border: none;
+    border-radius: 10px;
+    background: #fff;
+    max-width: 112px;
+    height: 40px;
+    padding: 0 12px;
+    /* transition: background-image 0.4s linear; */
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    text-align: center;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    color: #000;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    line-height: 24px;
+}
+
+.card__keyword:hover {
+    outline: none;
+    cursor: pointer;
+}
+
 .card__save-button {
     border: none;
     border-radius: 8px;
@@ -116,6 +142,18 @@
     margin-bottom: 0;
 }
 
+.card__src-link {
+    text-decoration: none;
+}
+
+.card__src-link:hover {
+    cursor: pointer;
+}
+
+.card__src-link:focus {
+    outline: none;
+}
+
 .card__data-container {
     height: 304px;
     display: flex;
@@ -133,7 +171,7 @@
     margin: 0 0 12px 0;
 }
 
-.cards__heading {
+.card__heading {
     font-family: 'Roboto Slab', sans-serif;
     font-size: 26px;
     font-weight: normal;
@@ -171,14 +209,30 @@
 }
 
 @media screen and (max-width: 930px) {
+    .card__keyword {
+        max-width: 88px;
+        top: 8px;
+        left: 8px;
+    }
+
     .card__save-button {
         top: 8px;
         right: 8px;
     }
     
+    .card__save-button:hover + .card__save-hint {
+        visibility: hidden;
+        opacity: 0;
+    }    
+    
     .card__delete-button {
         top: 8px;
         right: 8px;
+    }
+
+    .card__delete-button:hover + .card__delete-hint {
+        visibility: hidden;
+        opacity: 0;
     }
     
     .card__image {
@@ -190,10 +244,24 @@
         height: 270px;
     }
 
-    .cards__heading {
+    .card__heading {
         font-size: 22px;
         margin: 0 0 10px 0;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        -webkit-box-orient: vertical;
     }
+
+    .card__text {
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        -webkit-box-orient: vertical;
+    }
+    
     
     .card__article-container {
         margin: 16px 16px 0 16px;
@@ -206,6 +274,12 @@
 
 
 @media screen and (max-width: 425px) {
+    .card__keyword {
+        max-width: 112px;
+        top: 16px;
+        left: 16px;
+    }
+
     .card__save-button {
         top: 16px;
         right: 16px;
@@ -227,5 +301,13 @@
 
     .card__date {
         margin: 0 0 10px 0;
+    }
+
+    .card__heading {
+        -webkit-line-clamp: 3;
+    }
+
+    .card__text {
+        -webkit-line-clamp: 3;
     }
 }
