--- a/src/components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/components/SavedNewsHeader/SavedNewsHeader.css
@@ -21,3 +21,9 @@
         padding: 14px 40px 12px 40px;
     }
 }
+
+@media screen and (max-width: 425px) {
+    .header_sv {
+        padding: 16px 22px 16px 16px;
+    }
+}
