--- a/src/components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/components/SavedNewsHeader/SavedNewsHeader.css
@@ -22,6 +22,15 @@
     }
 }
 
+@media screen and (max-width: 930px) {
+    .header_sv {
+        z-index: 30;
+    }
+    .header__title_sv {
+        z-index: 30;
+    }
+}
+
 @media screen and (max-width: 425px) {
     .header_sv {
         padding: 16px 22px 16px 16px;
