--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -19,20 +19,20 @@
 
 .about__title {
     color: #1A1B22;
-    font-family: 'Roboto Slab', sans-serif;
+    font-family: 'Roboto Slab', 'Arial', 'Helvetica', sans-serif;
     font-size: 40px;
     font-weight: normal;
-    line-height: 1.2;
+    line-height: 1.15;
     margin: 0 0 24px 0;
 }
 
 .about__text {
     max-width: 600px;
     color: #1A1B22;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
     font-size: 18px;
     font-weight: normal;
-    line-height: 1.2;
+    line-height: 1.3;
     margin: 0 0 24px 0;
 }
 
@@ -63,7 +63,6 @@
     
     .about__title {
         font-size: 30px;
-        line-height: 1.3;
         margin: 0 0 16px 0;
     }
     
