--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -32,7 +32,7 @@
 
 .cover__title {
     max-width: 608px;
-    font-family: 'Roboto Slab', sans-serif;
+    font-family: 'Roboto Slab', 'Arial', 'Helvetica', sans-serif;
     font-size: 60px;
     font-weight: normal;
     line-height: 1.1;
@@ -41,7 +41,7 @@
 
 .cover__text {
     max-width: 608px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
     font-size: 18px;
     font-weight: normal;
     line-height: 1.3;
@@ -57,7 +57,7 @@
 
 .results__title {
     margin: 0 0 64px 0;
-    font-family: 'Roboto Slab', sans-serif;
+    font-family: 'Roboto Slab', 'Arial', 'Helvetica', sans-serif;
     font-size: 40px;
     line-height: 1.2;
     font-weight: normal;
@@ -72,7 +72,9 @@
     border-color: transparent;
     background-color: #fff;
     color: #1A1B22;
+    font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
     font-size: 18px;
+    font-weight: 500;
     line-height: 1.2;
     margin-top: 64px;
     padding: 0;
