--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,11 +1,13 @@
 .navigation {
+    font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
+    font-weight: 500;
     /* display: flex; */
 }
 
 .navigation__main {
     color: #B6BCBF;
     font-size: 18px;
-    font-weight: normal;
+    line-height: 1.2;
     margin-right: 32px;
     text-decoration: none;
 }
@@ -41,7 +43,10 @@
     border-radius: 100px;
     padding: 0 18px;
     color: #fff;
+    font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
     font-size: 18px;
+    font-weight: 500;
+    line-height: 1.2;
     text-align: center;
 }
 
@@ -72,7 +77,10 @@
     border-radius: 100px;
     padding: 0 18px;
     color: #fff;
+    font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
     font-size: 18px;
+    font-weight: 500;
+    line-height: 1.2;
     text-align: left;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -142,6 +150,8 @@
 
     .burger-menu {
         display: flex;
+        font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
+        font-weight: 500;
     }
 
     .burger-menu__open::after {
@@ -155,7 +165,6 @@
         z-index: 5;
         background-attachment: fixed;
     }
-
 
     .burger-menu__toggle {
         position: absolute;
@@ -224,10 +233,13 @@
     .burger-menu__item {
         text-decoration: none;
         color: #fff;
-        font-family: 'Roboto', sans-serif;
         font-size: 18px;
         line-height: 3.1;
         /* margin: 16px 16px 22px 16px; */
+    }
+
+    .burger-menu__item_active {
+        text-decoration: underline;
     }
 
     .burger-menu__item_black {
@@ -241,8 +253,9 @@
         border: 1px solid #fff;
         border-radius: 100px;
         color: #fff;
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
         font-size: 18px;
+        font-weight: 500;
         line-height: 1.2;
         text-align: center;
         justify-self: center;
