--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -25,8 +25,9 @@
     white-space: nowrap;
     overflow: hidden;
     color: #000;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
     font-size: 14px;
+    font-weight: 500;
     line-height: 24px;
 }
 
@@ -91,8 +92,9 @@
     border-color: transparent;
     background-color: #fff;
     color: #000;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
     font-size: 12px;
+    font-weight: 500;
     position: absolute;
     top: 24px;
     right: 70px;
@@ -113,8 +115,9 @@
     border-color: transparent;
     background-color: #fff;
     color: #000;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
     font-size: 10px;
+    font-weight: 500;
     position: absolute;
     top: 24px;
     right: 70px;
@@ -163,7 +166,7 @@
 }
 
 .card__date {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Source Sans Pro', 'Arial', 'Helvetica', sans-serif;
     font-size: 18px;
     font-weight: normal;
     line-height: 1.3;
@@ -172,7 +175,7 @@
 }
 
 .card__heading {
-    font-family: 'Roboto Slab', sans-serif;
+    font-family: 'Roboto Slab', 'Arial', 'Helvetica', sans-serif;
     font-size: 26px;
     font-weight: normal;
     line-height: 1.15;
@@ -189,7 +192,7 @@
 }
 
 .card__text {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
     font-size: 16px;
     font-weight: normal;
     line-height: 1.3;
@@ -199,9 +202,9 @@
 
 
 .card__source {
-    font-family: 'Roboto Slab', sans-serif;
+    font-family: 'Roboto Slab', 'Arial', 'Helvetica', sans-serif;
     font-size: 16px;
-    font-weight: normal;
+    font-weight: 700;
     line-height: 1.2;
     color: #B6BCBF;
     text-transform: uppercase;
