--- a/src/components/NothingFound/NothingFound.css
+++ b/src/components/NothingFound/NothingFound.css
@@ -12,7 +12,7 @@
 
 .not-found__title {
     color: #1A1B22;
-    font-family: 'Roboto Slab', sans-serif;
+    font-family: 'Roboto Slab', 'Arial', 'Helvetica', sans-serif;
     font-size: 26px;
     line-height: 30px;
     margin: 24px auto 16px auto;
@@ -20,7 +20,7 @@
 
 .not-found__text {
     color: #B6BCBF;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
     font-size: 18px;
     line-height: 24px;
     margin: 0 auto;
