--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -24,7 +24,7 @@
 
 .preloader__text {
     color: #B6BCBF;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
     font-size: 18px;
     line-height: 24px;
 }
