--- a/src/components/SavedNews/SavedNews.css
+++ b/src/components/SavedNews/SavedNews.css
@@ -10,7 +10,7 @@
 .saved-news__title {
     max-width: 530px;
     margin: 0 0 30px 0;
-    font-family: 'Roboto Slab', sans-serif;
+    font-family: 'Roboto Slab', 'Arial', 'Helvetica', sans-serif;
     font-size: 40px;
     line-height: 1.2;
     font-weight: normal;
@@ -19,7 +19,7 @@
 
 .saved-news__breadcrumbs {
     margin: 0 0 28px 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
     font-size: 18px;
     line-height: 1.2;
     font-weight: normal;
@@ -28,7 +28,7 @@
 
 .saved-news__keywords{
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
     font-size: 18px;
     line-height: 1.2;
     font-weight: normal;
@@ -42,7 +42,7 @@
 }
 
 .saved-news__keyword-span {
-    font-weight: 900;
+    font-weight: 700;
 }
 
 @media screen and (max-width: 930px) {
