--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -41,7 +41,7 @@
     background-color: transparent;
     border: 1px solid #fff;
     border-radius: 100px;
-    padding: 0 18px;
+    padding: 11.87px 18px 15.12px 18px;
     color: #fff;
     font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
     font-size: 18px;
@@ -75,7 +75,7 @@
     background-size: 17.5px 16px;
     border: 1px solid #fff;
     border-radius: 100px;
-    padding: 0 18px;
+    padding: 11.87px 18px 15.12px 18px;
     color: #fff;
     font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
     font-size: 18px;
@@ -143,7 +143,7 @@
 }
 
 /* Стиль для бургер меню на мобильных разрешениях */
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 588px) {
     .navigation {
         display: none;
     }
