--- a/src/components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/components/SavedNewsHeader/SavedNewsHeader.css
@@ -8,9 +8,9 @@
 }
 
 .header__title_sv {
-    font-family: 'Roboto Slab';
+    font-family: 'Roboto Slab', 'Arial', 'Helvetica', sans-serif;;
     color: #1A1B22;
-    font-weight: normal;
+    font-weight: 700;
     font-size: 20px;
     line-height: 1.2;
     margin: 0;
