--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ html {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Roboto Slab', 'Oxygen',
+  font-family: 'Roboto', 'Roboto Slab', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
